@@ -11,6 +11,7 @@
 
 import QtQuick 2.0
 import QtQuick.Particles 2.0
+import QtMultimedia 5.8
 
 import Tactile.Components 1.0
 import Tactile.Pixels 1.0
@@ -172,6 +173,7 @@ Rectangle {
                             onClicked: {
                                 if (!is_answer) {
                                     validation_animation.running = true;
+                                    sound_failure.play();
                                     return;
                                 }
 
@@ -180,6 +182,7 @@ Rectangle {
                                     response_text.width / 2,
                                     response_text.height / 2
                                 );
+                                sound_success.play();
                                 exploder.explode(30, coords.x, coords.y);
                             }
                         }
@@ -211,5 +214,14 @@ Rectangle {
                 }
             }
         }
+    }
+
+    SoundEffect {
+        id: sound_success
+        source: "../Pixels/challenge_complete.wav"
+    }
+    SoundEffect {
+        id: sound_failure
+        source: "../Pixels/ungrab.wav"
     }
 }
